# agent-loop

./: .gitignore  README.md  benchmark.py  pyproject.toml
.github/workflows/: test.yml
agent_loop/: __init__.py  agent.py  dispatcher.py  exceptions.py  models.py  skills.py
agent_loop/approval/: __init__.py  gates.py
agent_loop/context/: __init__.py  builder.py  models.py
agent_loop/mcp/: __init__.py  cache.py
agent_loop/tools/: __init__.py  base.py  edit.py  grep.py  read.py  shell.py  web_fetch.py  web_search.py
benchmarks/: bridge_benchmark.py  durability_test.py  stress_benchmark.py
docs/: architecture-reference.md
examples/: basic_agent.py  mcp_cache_demo.py
scripts/: run-as-child.py
tests/: __init__.py  test_agent.py  test_approval.py  test_context.py  test_dispatcher.py  test_fuzz.py  test_integration.py  test_mcp_cache.py  test_tools.py
tui/: bridge.py  package-lock.json  package.json  tsconfig.json
tui/src/: App.tsx  types.ts  useBridge.ts
tui/src/components/: ChatLog.tsx  InputBar.tsx  StatusBar.tsx  ToolCall.tsx
